--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -85,21 +85,25 @@ html {
 }
 
 .thankyou-container {
+  position: relative;
   background: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
-    url("https://res.cloudinary.com/karuna-wedding-org/image/upload/v1650718984/ryanAgnes/FKT_RA_01_195-min_kq5pdq.jpg");
+    url("https://res.cloudinary.com/karuna-wedding-org/image/upload/v1650718984/ryanAgnes/FKT_RA_01_195-min_kq5pdq.jpg")
+      no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 .livestream-container {
+  position: relative;
   background: linear-gradient(rgba(14, 13, 13, 0.727), rgba(14, 13, 13, 0.7)),
-    url("https://res.cloudinary.com/karuna-wedding-org/image/upload/v1650719038/ryanAgnes/FKT_RA_01_273-min_gcwpai.jpg");
+    url("https://res.cloudinary.com/karuna-wedding-org/image/upload/v1650719038/ryanAgnes/FKT_RA_01_273-min_gcwpai.jpg")
+      no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   background-size: cover;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
 }
 
 .slick-slide {
